src/test/ui/consts/const-eval/heap/alloc_intrinsic_untyped.stderr
error: untyped pointers are not allowed in constant
  --> $DIR/alloc_intrinsic_untyped.rs:6:1
   |
LL | const BAR: *mut i32 = unsafe { intrinsics::const_allocate(4, 4) as *mut i32};
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

